# branch-and-cut-for-ipgs

./: .gitignore  README.md
code/branch-and-prune-and-cut/: .gitignore  CMakeLists.txt  README.md  READMEApproximateNE.md  READMEExactNE.md  approxNEMain.cpp  main.cpp
code/branch-and-prune-and-cut/Algorithms/: BCMultiplicativeAdditiveApproxGNEP.cpp  BCMultiplicativeAdditiveApproxGNEP.h  BestMultiplicativeAdditiveApproxGNEP.cpp  BestMultiplicativeAdditiveApproxGNEP.h  BestMultiplicativeApproxGNEP.cpp  BestMultiplicativeApproxGNEP.h  BranchAndCutForGNEP.cpp  BranchAndCutForGNEP.h  BranchAndCutMultiplicativeGNEP.cpp  BranchAndCutMultiplicativeGNEP.h
code/branch-and-prune-and-cut/BranchAndCutTools/: BranchAndCutTools.h  CMakeLists.txt
code/branch-and-prune-and-cut/BranchAndCutTools/BranchingRule/: BranchingRule.cpp  BranchingRule.h  BranchingRuleFirstFractional.cpp  BranchingRuleFirstFractional.h  BranchingRuleMostFractional.cpp  BranchingRuleMostFractional.h  BranchingRuleRandom.cpp  BranchingRuleRandom.h
code/branch-and-prune-and-cut/BranchAndCutTools/Helpers/: CommonlyUsedFunctions.cpp  CommonlyUsedFunctions.h  CutInformation.cpp  CutInformation.h
code/branch-and-prune-and-cut/BranchAndCutTools/LinearAlgebra/: MySparseMatrix.cpp  MySparseMatrix.h  MySparseVector.cpp  MySparseVector.h
code/branch-and-prune-and-cut/BranchAndCutTools/Node/: Node.cpp  Node.h
code/branch-and-prune-and-cut/BranchAndCutTools/NodeSelection/: DFS.cpp  DFS.h  NodeSelector.cpp  NodeSelector.h
code/branch-and-prune-and-cut/BranchAndCutTools/OptimizationProblem/: Constraint.cpp  Constraint.h  NEPAbstractSolver.cpp  NEPAbstractSolver.h  NashEquilibriumProblem.cpp  NashEquilibriumProblem.h  OptimizationProblem.cpp  OptimizationProblem.h  SolveOutput.cpp  SolveOutput.h
code/branch-and-prune-and-cut/BuildGameFromInstance/: BuildGameFromInstance.cpp  BuildGameFromInstance.h
code/branch-and-prune-and-cut/Helpers/: BestMultiplicativeAdditiveBranchOutput.cpp  BestMultiplicativeAdditiveBranchOutput.h  BestMultiplicativeBranchOutput.cpp  BestMultiplicativeBranchOutput.h  MinNEPBranchOutput.cpp  MinNEPBranchOutput.h  NEPBranchOutput.cpp  NEPBranchOutput.h  intersectionRayHalfspace.cpp  intersectionRayHalfspace.h
code/branch-and-prune-and-cut/Parsers/: GameParserAndBuilder.cpp  GameParserAndBuilder.h
code/branch-and-prune-and-cut/SolverSpecific/: NEPManyEtasGurobi.cpp  NEPManyEtasGurobi.h  NEPMultAddApprox.cpp  NEPMultAddApprox.h  NEPMultiplicativeApprox.cpp  NEPMultiplicativeApprox.h  NodeGurobi.cpp  NodeGurobi.h
code/branch-and-prune-and-cut/Tests/: EasyNEP.test.cpp  TestInstances.cpp  TestInstances.h
code/branch-and-prune-and-cut/cmake/: FindEIGEN.cmake  FindGUROBI.cmake
instances/: README.md
instances/GNEP_knapsack_instances/: 2-10-2-strongcorr-0.txt  2-10-2-strongcorr-1.txt  2-10-2-strongcorr-2.txt  2-10-2-strongcorr-3.txt  2-10-2-strongcorr-4.txt  2-10-2-strongcorr-5.txt  2-10-2-strongcorr-6.txt  2-10-2-strongcorr-7.txt  2-10-2-strongcorr-8.txt  2-10-2-strongcorr-9.txt  2-10-2-uncorr-0.txt  2-10-2-uncorr-1.txt  2-10-2-uncorr-2.txt  2-10-2-uncorr-3.txt  2-10-2-uncorr-4.txt  2-10-2-uncorr-5.txt  2-10-2-uncorr-6.txt  2-10-2-uncorr-7.txt  2-10-2-uncorr-8.txt  2-10-2-uncorr-9.txt  2-10-2-weakcorr-0.txt  2-10-2-weakcorr-1.txt  2-10-2-weakcorr-2.txt  2-10-2-weakcorr-3.txt  2-10-2-weakcorr-4.txt  2-10-2-weakcorr-5.txt  2-10-2-weakcorr-6.txt  2-10-2-weakcorr-7.txt  2-10-2-weakcorr-8.txt  2-10-2-weakcorr-9.txt  2-10-5-strongcorr-0.txt  2-10-5-strongcorr-1.txt  2-10-5-strongcorr-2.txt  2-10-5-strongcorr-3.txt  2-10-5-strongcorr-4.txt  2-10-5-strongcorr-5.txt  2-10-5-strongcorr-6.txt  2-10-5-strongcorr-7.txt  2-10-5-strongcorr-8.txt  2-10-5-strongcorr-9.txt  (+1208 more)
instances/NEP_knapsack_instances/: 2-10-2-strongcorr-0.txt  2-10-2-strongcorr-1.txt  2-10-2-strongcorr-2.txt  2-10-2-strongcorr-3.txt  2-10-2-strongcorr-4.txt  2-10-2-uncorr-0.txt  2-10-2-uncorr-1.txt  2-10-2-uncorr-2.txt  2-10-2-uncorr-3.txt  2-10-2-uncorr-4.txt  2-10-2-weakcorr-0.txt  2-10-2-weakcorr-1.txt  2-10-2-weakcorr-2.txt  2-10-2-weakcorr-3.txt  2-10-2-weakcorr-4.txt  2-10-5-strongcorr-0.txt  2-10-5-strongcorr-1.txt  2-10-5-strongcorr-2.txt  2-10-5-strongcorr-3.txt  2-10-5-strongcorr-4.txt  2-10-5-uncorr-0.txt  2-10-5-uncorr-1.txt  2-10-5-uncorr-2.txt  2-10-5-uncorr-3.txt  2-10-5-uncorr-4.txt  2-10-5-weakcorr-0.txt  2-10-5-weakcorr-1.txt  2-10-5-weakcorr-2.txt  2-10-5-weakcorr-3.txt  2-10-5-weakcorr-4.txt  2-10-8-strongcorr-0.txt  2-10-8-strongcorr-1.txt  2-10-8-strongcorr-2.txt  2-10-8-strongcorr-3.txt  2-10-8-strongcorr-4.txt  2-10-8-uncorr-0.txt  2-10-8-uncorr-1.txt  2-10-8-uncorr-2.txt  2-10-8-uncorr-3.txt  2-10-8-uncorr-4.txt  (+1297 more)
instances/Schwarze23DiscreteNEP/: RNC10_10_1.txt  RNC10_10_2.txt  RNC10_10_3.txt  RNC10_10_4.txt  RNC10_20_1.txt  RNC10_20_2.txt  RNC10_20_3.txt  RNC10_20_4.txt  RNC10_5_1.txt  RNC10_5_2.txt  RNC10_5_3.txt  RNC10_5_4.txt  RNC22_1.txt  RNC22_2.txt  RNC22_3.txt  RNC22_4.txt  RNC23_1.txt  RNC23_2.txt  RNC23_3.txt  RNC23_4.txt  RNC23_5.txt  RNC23_6.txt  RNC23_7.txt  RNC23_8.txt  RNC24_1.txt  RNC24_2.txt  RNC24_3.txt  RNC24_4.txt  RNC25_1.txt  RNC25_2.txt  RNC25_3.txt  RNC25_4.txt  RNC32_1.txt  RNC32_2.txt  RNC32_3.txt  RNC32_4.txt  RNC33_1.txt  RNC33_2.txt  RNC33_3.txt  RNC33_4.txt  (+64 more)
instances/implementation_games/: I_10_10_mm_10_1.txt  I_10_10_mm_10_10.txt  (+448 more)
results/: README.md
(+11 files in other folders)
